src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@import url('https://fonts.googleapis.com/css2?family=Neucha&display=swap');


.footer_class{
  text-align: center;
  padding: 1px;
  background-color: #21b6ae;
  color: white;
  position: relative;
  
  height:120px;
  
  
}

.button_ip{
  border-radius: 35px !important;
  background-color: #21b6ae;
  padding: 18px 36px;
  font-size: 20px;
}

.back_button{
  border-radius: 35px !important;
  background-color: #21b6ae !important;
  padding: 18px 36px;
  font-size: 20px;
  align-self: auto;
}

._container{
  padding: 18px 36px !important;
}

.add_button{
  border-radius: 35px !important;
  background-color: #2137b6 !important;
  padding: 18px 36px;
  font-size: 20px;
}

.table_head{
  font-size: 24 !important
  
}

.signin-btn{
  --color: #560bad;
  font-family: inherit;
  display: inline-block;
  width: 6em;
  height: 2.6em;
  line-height: 1.6em;
  margin: 20px;
  position: relative;
  overflow: hidden;
  border: 2px solid var(--color);
  transition: color .5s;
  z-index: 1;
  font-size: 17px;
  border-radius: 6px;
  font-weight: 500;
  color: var(--color);
 }
 
 .signin-btn:before {
  content: "";
  position: absolute;
  z-index: -1;
  background: var(--color);
  height: 150px;
  width: 200px;
  border-radius: 50%;
 }
 
 .signin-btn:hover {
  color: #fff;
 }
 
 .signin-btn:before {
  top: 100%;
  left: 100%;
  transition: all .7s;
 }
 
 .signin-btn:hover:before {
  top: -30px;
  left: -30px;
 }
 
 .signin-btn:active:before {
  background: #3a0ca3;
  transition: background 0s;
 }

